syntax = "proto3";

package task;

option go_package = "go-grpc-task-execution-engine/pkg/task";

// The task execution service definition.
service TaskExecution {
  // Sends a greeting
  rpc ExecuteTask (TaskExecutionRequest) returns (TaskResponse) {}
  rpc GetTaskStatus (TaskStatusRequest) returns (TaskResponse) {}
  rpc CancelTask (TaskStatusRequest) returns (TaskResponse) {}
}

// The request message containing the user's name.
message TaskExecutionRequest {
  string name = 1;
}

// The request message containing the user's name.
message TaskStatusRequest {
  string uuid = 1;
}

// The response message containing the greetings
message TaskResponse {
  string uuid = 1;
  string status = 2;
  string details = 3;
  string name = 4;
}